# Insurance-AI-agent

./: .gitignore  Dockerfile  README.md  deploy.yaml  kustomization.yaml  pyproject.toml  requirement.txt
.github/workflows/: actions.yaml
Output/: RAG-report.md  RAG-report_1.md  recommendation.md
k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
src/Output/: recommendation.md
src/insure_agent/: main.py  types.py
src/insure_agent/Listeners/: __init__.py  custom_event.py
src/insure_agent/crews/ai_voice_crew/: ai_voice_crew.py
src/insure_agent/crews/onboarding_crew/: onboarding_crew.py
src/insure_agent/crews/onboarding_crew/config/: agents.yaml  tasks.yaml
src/insure_agent/crews/rag_crew/: rag_crew.py
src/insure_agent/crews/rag_crew/config/: agents.yaml  tasks.yaml
src/insure_agent/tools/: __init__.py  insurance_plan_database_tool.py  premium_calculator_tool.py
tests/: test_rag_crew.py
